--- a/template/index.html
+++ b/template/index.html
@@ -134,7 +134,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>День рождения:</strong> <span>4 Мая 2005</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>День рождения:</strong> <span>4 Мая 2005, г. Мурманск</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Образование: </strong> <span>Матмех СПбГУ, Программная инженерия</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Город:</strong> <span>Санкт-Петербург, Россия</span></li>
                 </ul>
